# AetherFlow

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  debug_injection.py  example.py  pyproject.toml  test_agent_basic.py  test_agent_execution.py
.github/workflows/: ci.yml  publish.yml  tag-release.yml  test.yml
agents/: __init__.py  agent.py  config.py  container.py  exceptions.py  models.py
agents/llm/: __init__.py  client.py  config.py  container.py  prompts.py  retry.py
agents/react/: __init__.py  context.py  engine.py  enhanced_nodes.py  models.py  nodes.py
agents/tools/: __init__.py  decorators.py  executor.py  models.py  registry.py  simple_executor.py
agents/tools/builtin/: __init__.py  compute.py  search.py  web.py
docs/: AetherFlow技术文档.md  README.md  architecture_guide.md  best_practices.md  concurrent_guide.md  getting_started.md  performance_optimization.md  依赖注入架构分析.md  设计文档.md
examples/: concurrent_example.py  context_demo.py
examples/agents/: .env.example  advanced_usage.py  basic_usage.py  config.yaml.example
src/aetherflow/: __init__.py  test.py
tests/: conftest.py  performance_benchmarks.py  test_async_support.py  test_concurrent_safety.py  test_conditional_composition.py  test_fan_primitives.py  test_fluent_interface.py  test_key_uniqueness_fix.py  test_node_decorator_injection.py  test_repeat_composition.py  test_retry_decorator.py  test_service_class_safety.py  test_smart_async_mixing.py  test_then_comprehensive.py  test_then_core.py  test_validation_exceptions.py
tests/agents/: __init__.py  test_config.py  test_container.py
tests/agents/llm/: __init__.py  test_client.py  test_config.py  test_container.py  test_integration.py  test_prompts.py  test_retry.py
tests/agents/react/: __init__.py  test_context.py  test_engine.py  test_nodes.py
tests/agents/tools/: __init__.py  test_concurrent_execution.py  test_decorators.py  test_registry.py
tests/fixtures/: __init__.py  injection_helpers.py
tests/shared/: __init__.py  data_models.py  test_constants.py
tests/utils/: __init__.py  assertions.py  node_factory.py  parallel_utils.py
