[project]
name = "AetherFlow"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "12306hujunjie", email = "545512690@qq.com"},
]
dependencies = ["dependency-injector>=4.48.1", "pydantic>=2.11.7"]
requires-python = ">=3.10"
readme = "README.md"
license = {file = "LICENSE"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.0.0",
    "pytest-html>=4.1.1",
    "flake8>=7.1.1",
    "pre-commit>=4.0.1",
    "ruff>=0.12.9",
    "mypy>=1.13.0",
    "bandit>=1.7.10",
]

# Ruff configuration
[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "C901",   # 复杂度控制 - 某些函数确实需要较高复杂度
    "F405",   # 星号导入可能未定义名称 - 测试工具模块使用
    "F403",   # 星号导入无法检测未使用导入 - 测试工具模块使用
    "E501",   # 行长度限制 - 某些长行是合理的
    "B007",   # 循环变量未使用 - 某些循环确实不需要使用变量
    "E712",   # 与True/False的比较 - 某些情况下需要显式比较
    "F841",   # 局部变量已赋值但从未使用 - 某些变量用于调试或文档目的
    "F401",   # 导入但未使用 - 某些导入用于重新导出
    "F811",   # 重复定义 - 某些情况下需要重新定义
    "B011",   # assert False的使用 - 测试代码中的合理用法
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# MyPy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

# Bandit configuration
[tool.bandit]
skips = ["B101"]  # Skip assert_used test
exclude_dirs = ["tests"]
